--- a/styles.css
+++ b/styles.css
@@ -41,5 +41,6 @@ a {
     text-decoration-line: underline;
     text-decoration-color: orange;
     text-decoration-style: dashed;
+    scroll-behavior: auto
     
 }
